Fixes vertical centering for institutions logo that are too wide

--- a/web-app/css/digivol-custom.css
+++ b/web-app/css/digivol-custom.css
@@ -86,6 +86,7 @@ h2.heading > div.subheading {
 }
 
 .thumbnail.institution img {
+    width: 200px;
     max-width: 200px;
     max-height: 200px;
 }
